# Chrysanthemum

./: .gitignore  .gitmodules  CMakeLists.txt  Chrysanthemum.cpp  Chrysanthemum.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  README.md  constants.json  data.json  helpers.cpp  helpers.h
NeuralNetwork.dSYM/Contents/: Info.plist
NeuralNetwork.dSYM/Contents/Resources/DWARF/: NeuralNetwork
config/: constants.json
data/: constants.json
include/: Chrysanthemum.h  City.h  Layer.h  NeuralNetwork.h  Neuron.h  exceptions.h  helpers.h
src/: Chrysanthemum.cpp  Chrysanthemum.h  City.cpp  City.h  Layer.cpp  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  exceptions.cpp  helpers.cpp  main.cpp
tests/: Chrysanthemum_tests.cpp  Chrysanthemum_tests.h  Layer_tests.cpp  Layer_tests.h  NeuralNetwork_tests.cpp  NeuralNetwork_tests.h  helpers_tests.cpp  helpers_tests.h  tests.cpp  tests.h
